@@ -1,3 +1,7 @@
+2017-03-12  Martin Pärtel <martin dot partel at gmail dot com>
+
+	* Made tests work with Ruby 1.8.7 and FUSE 2.8 again (issue #49).
+
 2017-02-04  Martin Pärtel <martin dot partel at gmail dot com>
 
 	* Deprecated -n as an alias to --no-allow-other (issue #48).
